# comfyui-custom-node-skills

./: LICENSE  README.md  README_ZH.md
plugins/comfyui-custom-nodes/.claude-plugin/: plugin.json
plugins/comfyui-custom-nodes/skills/comfyui-node-advanced/: SKILL.md
plugins/comfyui-custom-nodes/skills/comfyui-node-basics/: SKILL.md
plugins/comfyui-custom-nodes/skills/comfyui-node-datatypes/: SKILL.md
plugins/comfyui-custom-nodes/skills/comfyui-node-frontend/: SKILL.md
plugins/comfyui-custom-nodes/skills/comfyui-node-frontend/references/: api-reference.md
plugins/comfyui-custom-nodes/skills/comfyui-node-inputs/: SKILL.md
plugins/comfyui-custom-nodes/skills/comfyui-node-lifecycle/: SKILL.md
plugins/comfyui-custom-nodes/skills/comfyui-node-migration/: LICENSE.txt  SKILL.md
plugins/comfyui-custom-nodes/skills/comfyui-node-outputs/: SKILL.md
plugins/comfyui-custom-nodes/skills/comfyui-node-packaging/: SKILL.md
skill_test_nodes/: pyproject.toml
